# closed_loop_evaluation_agents_embedded

./: CMakeLists.txt  README.md  sdkconfig.defaults
docs/: findings.md  task_ladder.md
experiments/: README.md
host_tests/: CMakeLists.txt  test_common.h  test_main.c
host_tests/tasks/filter_tank_sequence/: test_controller.c  test_protocol.c
host_tests/tasks/mixing_tank_fill_heat/: test_controller.c  test_protocol.c
host_tests/tasks/pressure_vessel_interlock/: test_controller.c  test_protocol.c
host_tests/tasks/tank_fill_drain/: test_controller.c  test_protocol.c
host_tests/tasks/thermal_chamber_hysteresis/: test_controller.c  test_protocol.c
main/: CMakeLists.txt  app_main.c  uart_transport.c  uart_transport.h
sim/: evaluator.py  feedback.py  plant.py  qemu_runtime.py  scenarios.py  task_spec.py  test_evaluator.py  test_feedback.py  test_integration.py  test_plant.py  test_registry.py  test_task_spec.py  test_visible_run_eval.py  transcript.py
specs/: filter_tank_sequence.json  mixing_tank_fill_heat.json  pressure_vessel_interlock.json  tank_fill_drain.json  thermal_chamber_hysteresis.json
tools/: agent_loop.py  analyze_paper_repeats.py  bootstrap_env.sh  build_esp_toolchain_image.sh  build_flash_image.sh  build_paper_artifact_bundle.py  create_experiment_workspace.py  esp_toolchain_exec.sh  list_experiment_runs.py  prepare_agent_eval.sh  prepare_experiment_run.py  run_host_tests.sh  run_integration.py  run_paper_repeat_campaign.sh  run_paper_repeat_sweeps.sh  run_pi_matrix.py  run_plant_tests.py  run_qemu.py  run_qemu.sh  run_smoke.py  (+1 more)
(+828 files in other folders)
